2003-02-28  Roland Schwingel <roland.schwingel@onevision.de>

	Fixup UNICODE thinko in 2003-02-22 patch.
	* include/wingdi.h (AddFontMemResourceEx): Add.
	(RemoveFontMemResourceEx): Ditto.
	(AddFontMemResourceEx[AW]): Remove.
	(RemoveFontMemResourceEx[AW]): Ditto
	* lib/gdi32.def: (AddFontResourceEx): Add.
	(RemoveFontMemResourceEx): Ditto.
	(AddFontMemResourceEx[AW]): Remove.
	(RemoveFontResourceEx[AW]): Ditto.

2003-02-23  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winbase.h (EVENTLOG_SUCCESS): Add define.
	Thanks to: Thomas Weber  <thomasweber@sourceforge.net>

2003-02-22  Roland Schwingel  <roland.schwingel@onevision.de>

	* include/wingdi.h (AddFontMemResourceEx[AW]): Add.
	(RemoveFontMemResourceEx[AW]): Ditto
	* lib/gdi32.def (AddFontMemResourceEx[AW]): Add.
	(RemoveFontMemResourceEx[AW]): Ditto.

2003-02-22  Bang Jun-Young  <junyoung@netbsd.org>

	* lib/ntdll.def (NT*, RTL*, ZW*): Add missing exports.
	(NtCurrentTeb): Remove.

2003-02-22  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wsahelp.h: Remove ';' after closing
	#ifdef __cplusplus brace.
	* include/ws2spi.h: Likewise.

2003-02-22  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winbase.h (MEMORYSTATUSEX): Add structure.
	(GlobalMemoryStatusEx): Add prototype.
	* lib/kernel32.def (GlobalMemoryStatusEx): Add stub.

2003-02-17 Vaclav Haisman <V.Haisman@sh.cvut.cz>

	* include/winioctl.h (FSCTL_SET_SPARSE): Define.

2003-02-12  Roland Schwingel  <roland.schwingel@onevision.de>

	* include/wingdi.h (AddFontResourceEx[AW]): Add.
	(RemoveFontResourceEx[AW]): Ditto
	(FR_PRIVATE): Define.
	(FR_NOT_ENUM): Define.
	* lib/gdi32.def (AddFontResourceEx[AW]): Add.
	(RemoveFontResourceEx[AW]): Ditto.

2003-02-10  Earnie Boyd  <earnie@users.sf.net>

	* include/w32api.h: Increment version to 2.3.
	* Makefile.in: Ditto.

2003-02-09  Earnie Boyd  <earnie@users.sf.net>

	* lib/ddk/ntoskrnl.def (Ke386IoSetAccessProcess): Activate export.
	(Ke386QueryToAccessMap): Ditto.