@@ -40,6 +40,11 @@ typedef enum tagOLEGETMONIKER {
 	OLEGETMONIKER_UNASSIGN,
 	OLEGETMONIKER_TEMPFORUSER
 } OLEGETMONIKER;
+typedef enum tagUSERCLASSTYPE {
+	USERCLASSTYPE_FULL=1,
+	USERCLASSTYPE_SHORT,
+	USERCLASSTYPE_APPNAME
+} USERCLASSTYPE;
 #ifdef __GNUC__
 __extension__  /* IS0 C says enums limited to range of int */ 
 #endif
